# AdventOfCode

./: .gitignore  README.md
2015/: Cargo.toml  new.sh
2015/src/: main.rs
2019/: .gitignore  Cargo.toml
2019/benches/: aoc.rs
2019/src/: intcode.rs  lib.rs  main.rs
2019/src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs
2021/: README.md
2021/Day01/: Day1.go
2022/: README.md  solve.js  template.js
2023/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  run.py  template.py
2024/: CMakeLists.txt  all_days.cpp  day01.cpp  main.cpp  new.sh  runner.cpp  utils.cpp  utils.h
2024/solutions/: day01.cpp  day01.h  day02.cpp  day02.h  day03.cpp  day03.h  day04.cpp  day04.h  day05.cpp  day05.h  day06.cpp  day06.h  day07.cpp  day07.h  day08.cpp  day08.h  day09.cpp  day09.h  day10.cpp  day10.h  day11.cpp  day11.h  day12.cpp  day12.h  day13.cpp  day13.h  day14.cpp  day14.h  day15.cpp  day15.h  day16.cpp  day16.h  day17.cpp  day17.h  day18.cpp  day18.h  day19.cpp  day19.h  day20.cpp  day20.h  (+10 more)
2025/: .gitignore  Cargo.toml
2025/benches/: aoc.rs
2025/src/: lib.rs  main.rs
2025/src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  template.sh
(+76 files in other folders)
