[package]
name = "aoc-2019"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
itertools = "0.14.0"
reqwest = { version = "0.13.1", features = ["blocking"] }

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "aoc"
harness = false
